Fixed collapsable nav.

--- a/stylesheets/less/application.less
+++ b/stylesheets/less/application.less
@@ -104,14 +104,11 @@ ul.dropdown-menu {
 .navbar {
 	margin-bottom: 0px;
 	
-	.container {
-		height: 90px;
-	}
 	.brand {
 		padding: 16px 20px;
 	}
 	.nav {
-		top: 47px;
+		top: 60px;
 		
 		li > a {
 			text-transform: uppercase;
@@ -145,7 +142,6 @@ ul.dropdown-menu {
 		text-align: center;
 		
 		.container {
-			min-height: 450px;
 			padding-bottom: 20px;
 		}
 	}
@@ -180,6 +176,12 @@ div.mission {
 	color: @mdSecondaryColor;
 	font-weight: bold;
 }
+
+.highlighted_green {
+	color: @mdPrimaryColor;
+	font-weight: bold;
+}
+
 div.container.home{
 	font-size: 15px;
 	
